﻿IMPROVEMENTS / FIXES
- Spawning:
	- Only spawn SpawnProbe for dead current vessel if spawning is aborted.
- AI / WM:
	- Fix AoA limits above 90° not behaving as expected by only limiting the AoA if the limit is below 90°.
	- Add an Afterburner Override Threshold slider (force AB active below this speed threshold if at full throttle).

v1.5.3.0
IMPROVEMENTS / FIXES
- General:
	- Use an alternative method of calculating vessel bounds to get the vessel radius. — Fixes some weird results with parasite fighters from KSP's internal function for this.
	- Missile and countermeasure settings are now accessible in the Gameplay Settings section of the BDA Settings menu.
	- Animate animations in the physics update so that they work with time-scaling.
	- Localisation corrections/updates. Also in German.
	- Lots of optimisations.
	- Add Notes.md for devs with notes on optimisation and the current branches.
	- Add caching for all AudioClips to reduce GC.
	- Optimised access to Krakensbane and FloatingOrigin adjustments.
	- Fix proc structural panel, now properly no longer has lift.
	- HP log scaling now on by default when RUNWAY_PROJECT is enabled.
- UI:
	- Updated German localization by EzBro.
- Competition:
	- Add option to automatically disable the HUD on tournament start.
	- Fixes nukes causing hit craft to be reported as 'Crashed and Burned' in competitions.
- Spawning:
	- Fix spawning breakage due to PRE not being enabled and enable PRE checks and warnings during spawning.
	- Recover KSP's camera after spawning failure.
- Damage:
	- Fix the bug preventing explosive damage applying to buildings.
	- Rework how damage is applied to buildings and how they regenerate.
	- Add a building damage multiplier.
	- Fix reverse raycasts that were using the wrong rays.
	- Fix detonate direction in BDExplosive part, missiles/rockets with ContinuousRod/ShapedCharge warheads should now have properly oriented AoEs.
	- EMP warheads can now be set to be hard/soft EMP in their configs.