@@ -556,6 +556,7 @@ Localization
         #LOC_BDArmory_WaypointYawAuthorityTime = Waypoint Yaw Authority Time
         #LOC_BDArmory_maxAllowedGForce = Max G
         #LOC_BDArmory_maxAllowedAoA = Max AoA
+        #LOC_BDArmory_postStallAoA = Post-Stall AoA Mode-Switch
 
         #LOC_BDArmory_PilotAI_EvadeExtend = Evasion/Extension
         #LOC_BDArmory_ExtendMultiplier = Extend Multiplier
@@ -637,6 +638,7 @@ Localization
         #LOC_BDArmory_AIWindow_bankLimit = Max roll angle
         #LOC_BDArmory_AIWindow_GForce = Maneuvers will not exceed this G limit
         #LOC_BDArmory_AIWindow_AoA = Maneuver AoA will not exceed this
+        #LOC_BDArmory_AIWindow_AoAPostStall = Switch flight modes for post-stall beyond this AoA
         #LOC_BDArmory_AIWindow_MinEvade = Min time AI evades an attack
         #LOC_BDArmory_AIWindow_EvExNonlin = Strength of oscillations when evading/extending
         #LOC_BDArmory_AIWindow_evadeDist = Evades if incoming fire within this
@@ -679,6 +681,7 @@ Localization
         #LOC_BDArmory_AIWindow_AltitudeSteerLimiterAltitude = Alt Steer Altitude
         #LOC_BDArmory_AIWindow_WaypointPreRollTime = WP Pre-Roll Time
         #LOC_BDArmory_AIWindow_WaypointYawAuthorityTime = WP Yaw Auth Time
+        #LOC_BDArmory_AIWindow_postStallAoA = Post-Stall AoA
         #LOC_BDArmory_AIWindow_EvadeExtend = Energy
         #LOC_BDArmory_AIWindow_ExtendMultiplier = Extend Mult.
         #LOC_BDArmory_AIWindow_ExtendDistanceAirToAir = Ext. Dist. A2A
@@ -727,7 +730,7 @@ Localization
         #LOC_BDArmory_AIWindow_ControlHelp = Control Limits set limits on craft control authority under various conditions
         #LOC_BDArmory_AIWindow_ControlHelp_limiters = Steer Limiters - Steer Limiters limit Control Authority of the craft. The Low Speed Limiter sets AI control authority when at or below the Low-Speed Limit Speed. The High-Speed Limiter sets AI control authority when at or above the High-Speed Limit Speed. When between the Low and High Limit Speeds, the Limiter value linearly changes from the Low Limit to the High Limit value. The Altitude Steer Limiter scales the steer limit based on altitude above the limit by (altitude/limit)^factor.
         #LOC_BDArmory_AIWindow_ControlHelp_bank = Max Bank - This sets the max allowed bank angle. When below 180, the AI will not roll past this many degrees from Horizontal during maneuvers.
-        #LOC_BDArmory_AIWindow_ControlHelp_clamps = Max Allowed G and AoA - Max Allowed G limits the AI to maneuvers that pull this many Gs or less. Max Allowed AoA limits the the maximum Angle of Attack the AI can use.
+        #LOC_BDArmory_AIWindow_ControlHelp_clamps = Max Allowed G and AoA - Max Allowed G limits the AI to maneuvers that pull this many Gs or less. Max Allowed AoA limits the the maximum Angle of Attack the AI can use. Post-Stall AoA Mode-Switch controls when the plane will switch steering modes due to being beyond the AoA threshold.
 
         #LOC_BDArmory_AIWindow_EvadeHelp = Evasion/Extension controls both how the AI reacts to incoming threats, be it gunfire, missiles, or other craft, and how the AI responds to where other craft are, relative to itself. 
         #LOC_BDArmory_AIWindow_EvadeHelp_Evade = EvasionTime, EvasionThreshold, EvasionTimeThreshold, Don't Evade My Target - These four settings control when the AI will evade. EvasionTime sets how many seconds the AI will do evasive maneuvers. EvasionTimeThreshold sets how long the AI needs to be under fire before it begins evading. EvasionThreshold sets how close incoming gunfire needs to come to trigger evasion. The Don't Evade My Target toggle determines whether gunfire from the current target is ignored for evasion purposes.
