@@ -4,6 +4,7 @@
 - AI / WM:
 	- Fix AoA limits above 90° not behaving as expected by only limiting the AoA if the limit is below 90°.
 	- Add an Afterburner Override Threshold slider (force AB active below this speed threshold if at full throttle).
+	- Add a post-stall AoA threshold for switching flight-mode when beyond this threshold.
 
 v1.5.3.0
 IMPROVEMENTS / FIXES
